--- a/styles/style.css
+++ b/styles/style.css
@@ -424,10 +424,11 @@ footer {
 
 .social-media {
     display: flex;
+    align-items: center;
     grid-gap: 30px;
     justify-content: center;
     border-top: 1px solid #C4C4C4;
-    padding-top: 30px;
+    padding-top: 20px;
     padding-bottom: 20px;
 }
 
