Minor fixes in header

--- a/styles/style.css
+++ b/styles/style.css
@@ -50,13 +50,13 @@ header {
     align-items: center;
 }
 
-header .container {
+header nav {
+    position: relative;
     width: 78vw;
     height: 5vh;
     margin-left: auto;
     margin-right: auto;
     display: flex;
-    justify-content: space-between;
     align-items: center;
 }
 
